--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha Clash Pro</title>
-</head>
-<body>
-    
-</body>
+    <!--! CSS  -->
+    <link rel="stylesheet" href="styles/style.css">
+    <!--! Daisy UI and Tailwind CSS  -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="font-poppins">
+    <section class="home">
+
+    </section>
+
+    <section class="play-ground">
+
+    </section>
+
+    <section class="score">
+        
+    </section>
+  </body>
 </html>
