--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
     <main
       class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center"
     >
+    <!--! Home  -->
       <section
-        class="home min-h-screen text-white flex justify-center items-center hidden"
+        class="home min-h-screen text-white flex justify-center items-center "
       >
         <div class="flex flex-col items-center gap-5">
           <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
           <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-          <button class="btn bg-white text-black">Play Now</button>
+          <button onclick="playNow()" class="btn bg-white text-black">Play Now</button>
         </div>
       </section>
+
       <!--! Play Fround Start  -->
-      <section class="play-ground">
+      <section class="play-ground hidden">
         <div>
           <!--? Screen  -->
          
@@ -94,8 +96,20 @@
           </div>
         </div>
       </section>
-
-      <section class="score"></section>
+      <!--! Score  -->
+      <section class="score flex justify-center items-center min-h-screen hidden">
+        <div class="text-white text-center space-y-5 bg-[#FFFFFF33] p-4 rounded-lg">
+            <h1 class="text-8xl">
+                <span class="font-extrabold">Score: </span>
+                <span>14</span>
+            </h1>
+            <button class="btn bg-white text-black font-bold">Play Again</button>
+            <p>Practice Make You A Pro</p>
+        </div>
+      </section>
     </main>
+    
+    <script src="js/alpha-clash.js"></script>
+
   </body>
 </html>
