--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center"
     >
     <!--! Home  -->
-      <section
+      <section id="home"
         class="home min-h-screen text-white flex justify-center items-center "
       >
         <div class="flex flex-col items-center gap-5">
@@ -30,7 +30,7 @@
       </section>
 
       <!--! Play Fround Start  -->
-      <section class="play-ground hidden">
+      <section id="play-ground" class="play-ground hidden">
         <div>
           <!--? Screen  -->
          
@@ -109,6 +109,7 @@
       </section>
     </main>
     
+    <script src="js/utility.js"></script>
     <script src="js/alpha-clash.js"></script>
 
   </body>
